tests/trybuild_fails/not_send_owner.stderr
error[E0277]: `MutexGuard<'static, ()>` cannot be sent between threads safely
  --> tests/trybuild_fails/not_send_owner.rs:30:18
   |
30 |     check_send::<Pair<NotSend>>();
   |                  ^^^^^^^^^^^^^ `MutexGuard<'static, ()>` cannot be sent between threads safely
   |
   = help: within `NotSend`, the trait `Send` is not implemented for `MutexGuard<'static, ()>`
note: required because it appears within the type `NotSend`
  --> tests/trybuild_fails/not_send_owner.rs:5:8
   |
5  | struct NotSend(MutexGuard<'static, ()>);
   |        ^^^^^^^
   = note: required for `Pair<NotSend>` to implement `Send`
note: required by a bound in `check_send`
  --> tests/trybuild_fails/not_send_owner.rs:23:18
   |
23 | fn check_send<T: Send>() {}
   |                  ^^^^ required by this bound in `check_send`
